RESOLVED FIXED29823
[Chromium] V8WebKitPointConstructor ignores parameters
https://bugs.webkit.org/show_bug.cgi?id=29823
Summary [Chromium] V8WebKitPointConstructor ignores parameters
Nate Chapin
Reported 2009-09-28 13:28:22 PDT
"new WebKitPoint(x,y);" currently gets treated exactly the same "new WebKitPoint();". The constructor callback needs to be customized instead of just calling V8Proxy::constructDOMObject().
Attachments
patch (1.93 KB, patch)
2009-09-28 13:30 PDT, Nate Chapin
no flags
Nate Chapin
Comment 1 2009-09-28 13:30:46 PDT
Dimitri Glazkov (Google)
Comment 2 2009-09-28 13:35:21 PDT
Comment on attachment 40252 [details] patch r=me.
WebKit Commit Bot
Comment 3 2009-09-28 14:31:01 PDT
Comment on attachment 40252 [details] patch Clearing flags on attachment: 40252 Committed r48834: <http://trac.webkit.org/changeset/48834>
WebKit Commit Bot
Comment 4 2009-09-28 14:31:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.