2009-09-28  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        Allow V8 to handle x/y parameters in a WebKitPoint constructor.
        https://bugs.webkit.org/show_bug.cgi?id=29823

        Fixes V8's handling of LayoutTests/fast/dom/Window/webkitConvertPoint.html

        * bindings/v8/custom/V8WebKitPointConstructor.cpp: Allow for x/y parameters in constructor.

Canonical link: https://commits.webkit.org/40397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48834 268f45cc-cd09-0410-ab3c-d52691b4dbfc