WebCore/bindings/v8/custom/V8WebKitPointConstructor.cpp
@@ -30,17 +30,37 @@
 
 #include "config.h"
 
+#include "V8Binding.h"
 #include "V8CustomBinding.h"
+#include "V8DOMWrapper.h"
 #include "V8Index.h"
-#include "V8Proxy.h"
 #include "WebKitPoint.h"
+
+#include <wtf/MathExtras.h>
 
 namespace WebCore {
 
 CALLBACK_FUNC_DECL(WebKitPointConstructor)
 {
     INC_STATS("DOM.WebKitPoint.Constructor");
-    return V8Proxy::constructDOMObject<V8ClassIndex::WEBKITPOINT, WebKitPoint>(args);
+    float x = 0;
+    float y = 0;
+    if (args.Length() > 1) {
+        if (!args[0]->IsUndefined()) {
+            x = toFloat(args[0]);
+            if (isnan(x))
+                x = 0;
+        }
+        if (!args[1]->IsUndefined()) {
+            y = toFloat(args[1]);
+            if (isnan(y))
+                y = 0;
+        }
+    }
+    PassRefPtr<WebKitPoint> point = WebKitPoint::create(x, y);
+    point->ref();
+    V8DOMWrapper::setDOMWrapper(args.Holder(), V8ClassIndex::WEBKITPOINT, point.get());
+    return args.Holder();
 }
 
 } // namespace WebCore
